[package]
name = "vimeo-event-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
ureq = { version = "2", features = ["json", "cookies", "tls", "gzip", "brotli"] }
eyre = "0"
html-escape = "0"
url = "2.2"
base64 = "0.21.4"
clap = { version = "4.4.6", features = ["derive"] }
indicatif = "0.17.7"
